syntax = "proto3";
package management;
import "management/role_scope.proto";

message UpsertRoleRequest {
	string tenant_id = 1;
	string id = 2;
	repeated RoleScope allowed_scopes = 3;
}

message UpsertRoleResponse {
	string id = 1;
}
